--- a/example-web-jsf-mobile/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-mobile/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -21,7 +21,7 @@ AJAX_DEMO.SIMPLE       = Exemple d'une requete ajax simple :
 AJAX_DEMO.TITLE        = D\u00E9monstration de l'utilisation d'AJAX
 
 APPLICATION.DESCRIPTION = Cette application contient de nombreux exmples sur l'utilisation des modules esup-commons.
-APPLICATION.TITLE       = Esup-example
+APPLICATION.TITLE       = Esup-example mobile
 
 CAS_DEMO.TITLE = D\u00E9monstration du module authentification
 
