Page d'exception terminée (desktop).

--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -27,6 +27,9 @@ CONFIRM.TEXT = Confirm
 
 DESKTOP.TEXT = Wiew in desktop mode
 
+EXCEPTION.EXCEPTION.NAME = Name exception
+EXCEPTION.TEXT.BOTTOM    = A report of exception was sent to
+
 HELP.TEXT         = Help
 HELP.TEXT.SUMMARY = Here, come to register the online help...
 
