--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -27,6 +27,9 @@ CONFIRM.TEXT = Confirmer
 
 DESKTOP.TEXT = Voir en mode bureau
 
+EXCEPTION.EXCEPTION.NAME = Nom de l'exception
+EXCEPTION.TEXT.BOTTOM    = Un rapport d'exception a \u00E9t\u00E9 envoy\u00E9 \u00E0
+
 HELP.TEXT         = Aide
 HELP.TEXT.SUMMARY = Ici, venir inscrire l'aide en ligne...
 
