Rendus Mobile. Passage portlet -> servlet. Les exceptions en mode portlet, ce n'est pas réglé (pas d'interception).

--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -55,6 +55,8 @@ PREFERENCES.LANGUAGE.LABEL                  = Your language
 PREFERENCES.LANGUAGE.SHORT_LABEL            = Language: 
 PREFERENCES.TEXT                            = Preferences
 
+SERVLET.TEXT = Application out of the portal
+
 SUBMIT.TEXT = Accept
 
 USER.ERROR.DISPLAY_NAME = Without Ldap entry
