--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -55,6 +55,8 @@ PREFERENCES.LANGUAGE.LABEL                  = Votre langue
 PREFERENCES.LANGUAGE.SHORT_LABEL            = Langue: 
 PREFERENCES.TEXT                            = Pr\u00E9f\u00E9rences
 
+SERVLET.TEXT = Application hors du portail
+
 SUBMIT.TEXT = Accepter
 
 USER.ERROR.DISPLAY_NAME = Sans entr\u00E9e Ldap
