--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -63,5 +63,6 @@ USER.ERROR.DISPLAY_NAME = Without Ldap entry
 USER.TEXT               = User
 
 WELCOME.INTRO_1 = Welcome in "
-WELCOME.INTRO_2 = ". Yous can change your preferences above.
+WELCOME.INTRO_2 = " - version 
+WELCOME.INTRO_3 = . Yous can change your preferences above.
 WELCOME.TEXT    = Home
