--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -63,5 +63,6 @@ USER.ERROR.DISPLAY_NAME = Sans entr\u00E9e Ldap
 USER.TEXT               = Utilisateur
 
 WELCOME.INTRO_1 = Bienvenue dans "
-WELCOME.INTRO_2 = ". Vous pouvez changer vos pr\u00E9f\u00E9rences ci-dessus.
+WELCOME.INTRO_2 = " - version 
+WELCOME.INTRO_3 = . Vous pouvez changer vos pr\u00E9f\u00E9rences ci-dessus.
 WELCOME.TEXT    = Acccueil
