--- a/example-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -10,3 +10,5 @@ BLANK.INFORMATION.DESCRIBE = Ceci est un exemple d information.
 BLANK.MENU                 = About
 BLANK.MENU.TITLE           = About This Blank application
 BLANK.WELCOME              = Voici l'application vide. Vous pouvez d\u00E9sormais commencer votre projet. Vous trouverez  dans l'application de d\u00E9monstration esup-example de nombreux cas qui sont suceptible de vous guider.
+
+WS_DEMO.TITLE = Web Service Access
