fixed: paginator refresh when entry deleting added: message during entry deleting

--- a/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -23,7 +23,8 @@ EXCEPTION_DEMO.BUTTON.TEST = Test l'envoie d'une exception
 EXCEPTION_DEMO.DESCRIPTION = Cette module permet d'utiliser le service exceptionHandling d'esup-commons. (cf <a href="http://www.esup-portail.org/display/PROJCOMMONS/02+Gestion+des+exceptions">lien vers le wiki</a>). Cette d\u00E9monstration appelle une m\u00E9thode qui lance une exception. Le service exceptionHandling capte cette exception et redirige vers une page pr\u00E9d\u00E9finie.
 EXCEPTION_DEMO.TITLE       = D\u00E9monstration du module Exception Handler
 
-INFO.ENTER.SUCCESS = Enregistrement avec succ\u00E8s
+INFO.DELETE.SUCCESS = Entr\u00E9e supprim\u00E9e
+INFO.ENTER.SUCCESS  = Enregistrement avec succ\u00E8s
 
 JPA_DEMO.TITLE          = D\u00E9monstration de l'utillisation de JPA (CRUD)
 JPA_DEMO.TITLE.ADD_USER = Formulaire d'ajout d'un utilisateur
