[FIX] fix errors in message bundles + translate the ones that should have been in English but were not

--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -50,9 +50,9 @@ PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Non accessible
 PREFERENCES.ACCESSIBILITY.LABEL             = Mode d'accessibilit\u00E9
 PREFERENCES.ACCESSIBILITY.SCREENREADER      = Pour lecteur d'\u00E9cran.
 PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT = <b>Attention</b> : vous avez choisi d'utiliser un lecteur d'\u00E9cran pour rendre cette application plus accessible.\r\nCeci peut affecter n\u00E9gativement d'autres usages.
-PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Mode d'Accesibilit\u00E9: 
+PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Mode d'Accessibilit\u00E9:
 PREFERENCES.LANGUAGE.LABEL                  = Votre langue
-PREFERENCES.LANGUAGE.SHORT_LABEL            = Langue: 
+PREFERENCES.LANGUAGE.SHORT_LABEL            = Langue:
 PREFERENCES.TEXT                            = Pr\u00E9f\u00E9rences
 
 SERVLET.TEXT = Application hors du portail
@@ -63,6 +63,6 @@ USER.ERROR.DISPLAY_NAME = Sans entr\u00E9e Ldap
 USER.TEXT               = Utilisateur
 
 WELCOME.INTRO_1 = Bienvenue dans "
-WELCOME.INTRO_2 = " - version 
+WELCOME.INTRO_2 = " - version
 WELCOME.INTRO_3 = . Vous pouvez changer vos pr\u00E9f\u00E9rences ci-dessus.
-WELCOME.TEXT    = Acccueil
+WELCOME.TEXT    = Accueil
