--- a/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-blank-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -8,12 +8,12 @@ ABOUT.TEXT.LICENCE.CONTENT      = ESUP-portail
 ABOUT.TEXT.LICENCE.CONTENT.LINK = http://www.esup-portail.org/display/ESUP/La+licence+ESUP-Portail
 ABOUT.TEXT.M_COPYRIGHT          = Copyright
 ABOUT.TEXT.M_COPYRIGHT.CONTENT  = \u00A9 2010 Consortium ESUP-Portail
-ABOUT.TEXT.OTHERS               = Others informations
+ABOUT.TEXT.OTHERS               = Other information
 ABOUT.TEXT.OTHERS.CONTENT       = To complete...
 ABOUT.TEXT.SUMMARY              = Abstract
-ABOUT.TEXT.SUMMARY.CONTENT      = Application to make tries and build a new from this Maven archetype !
+ABOUT.TEXT.SUMMARY.CONTENT      = Application meant to give you some examples and show you how to create a new project from this Maven archetype
 
-AUTHENTICATION_EXCEPTION.TITLE = Authentication error: {0}
+AUTHENTICATION_EXCEPTION.TITLE = Authentification error: {0}
 
 BACK.TEXT = Back
 
@@ -25,7 +25,7 @@ CONFIG_EXCEPTION.TITLE = Configuration exception, property {0} of {1} class can 
 
 CONFIRM.TEXT = Confirm
 
-DESKTOP.TEXT = Wiew in desktop mode
+DESKTOP.TEXT = View in desktop mode
 
 EXCEPTION.EXCEPTION.NAME = Name exception
 EXCEPTION.TEXT.BOTTOM    = A report of exception was sent to
@@ -39,30 +39,30 @@ LOGOUT.TEXT = Logout
 
 MENU.SHORTDESC = Main menu
 
-MOBILE.TEXT = Wiew in mobile mode
+MOBILE.TEXT = View in mobile mode
 
 M_BLANK.TEXT = Blank App
 
-M_WELCOME.INTRO_2 = ". Yous can change your preferences below.
+M_WELCOME.INTRO_2 = ". You can change your preferences below.
 
 PREFERENCES.ACCESSIBILITY.DEFAULT           = Default
 PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Inaccessible
 PREFERENCES.ACCESSIBILITY.LABEL             = Accessibility mode
 PREFERENCES.ACCESSIBILITY.SCREENREADER      = For screen reader.
-PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT = <b>Attention</b>: you chose to use a reader of screen to return this more accessible application.\r\nThis may affect other users negatively
-PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Accessibility Mode: 
+PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT = <b>Warning</b>: you chose to use a screen reader to get a more accessible dislay.\r\nDoing so may affect user experience negatively...
+PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Accessibility Mode:
 PREFERENCES.LANGUAGE.LABEL                  = Your language
-PREFERENCES.LANGUAGE.SHORT_LABEL            = Language: 
+PREFERENCES.LANGUAGE.SHORT_LABEL            = Language:
 PREFERENCES.TEXT                            = Preferences
 
-SERVLET.TEXT = Application out of the portal
+SERVLET.TEXT = Application outside of a portal container
 
-SUBMIT.TEXT = Accept
+SUBMIT.TEXT = Submit
 
-USER.ERROR.DISPLAY_NAME = Without Ldap entry
+USER.ERROR.DISPLAY_NAME = No Ldap entry
 USER.TEXT               = User
 
-WELCOME.INTRO_1 = Welcome in "
-WELCOME.INTRO_2 = " - version 
-WELCOME.INTRO_3 = . Yous can change your preferences above.
+WELCOME.INTRO_1 = Welcome to "
+WELCOME.INTRO_2 = " - version
+WELCOME.INTRO_3 = . You can change your settings above.
 WELCOME.TEXT    = Home
