--- a/esup-blank-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-blank-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -1,12 +1,12 @@
 
-ABOUT.AUTHOR       = Auteur
+ABOUT.AUTHOR       = Author
 ABOUT.AUTHOR.NAME  = Leproust C\u00E9dric
 ABOUT.SOCIETY      = Consortium
 ABOUT.SOCIETY.NAME = Esup portail
 ABOUT.VERSION      = Version
 
 BLANK.INFORMATION          = Information
-BLANK.INFORMATION.DESCRIBE = Ceci est un exemple d information.
+BLANK.INFORMATION.DESCRIBE = This is an example of information.
 BLANK.MENU                 = About
-BLANK.MENU.TITLE           = About This Blank application
-BLANK.WELCOME              = Voici l'application vide. Vous pouvez d\u00E9sormais commencer votre projet. Vous trouverez  dans l'application de d\u00E9monstration esup-example de nombreux cas qui sont suceptible de vous guider.
+BLANK.MENU.TITLE           = About this blank application
+BLANK.WELCOME              = This is the blank application. You can now start your own projet. Various examples in the esup-example project can help you in doing so.
