--- a/example-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-portlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -9,6 +9,6 @@ BLANK.INFORMATION          = Information
 BLANK.INFORMATION.DESCRIBE = Ceci est un exemple d information.
 BLANK.MENU                 = A propos
 BLANK.MENU.TITLE           = A propos de cette application
-BLANK.WELCOME              = Voici l'application vide. Vous pouvez d\u00E9sormais commencer votre projet. Vous trouverez  dans l'application de d\u00E9monstration esup-example de nombreux cas qui sont suceptibles de vous guider.
+BLANK.WELCOME              = Voici l'application vide. Vous pouvez d\u00E9sormais commencer votre projet. Vous trouverez  dans l'application de d\u00E9monstration esup-example de nombreux cas qui sont susceptibles de vous guider.
 
 WS_DEMO.TITLE = Acc\u00E8s Web Service
