--- a/example-web-springmvc-portlet/src/main/resources/properties/i18n/bundles/JsfMessages_fr.properties
+++ b/example-web-springmvc-portlet/src/main/resources/properties/i18n/bundles/JsfMessages_fr.properties
@@ -1,4 +1,4 @@
-test.test1=Tu n'as compris grand chose...
+test.test1=Tu n'as pas compris grand chose...
 javax.faces.component.UIInput.CONVERSION                  = Erreur de conversion
 javax.faces.component.UIInput.CONVERSION_detail           = "{0}": Erreur durant la mise \u00E0 jour des donn\u00E9es.
 javax.faces.component.UIInput.REQUIRED                    = Un champ obligatoire est vide
