--- a/src/main/resources/properties/i18n/bundles/JsfMessages_en.properties
+++ b/src/main/resources/properties/i18n/bundles/JsfMessages_en.properties
@@ -1,4 +1,4 @@
-test.test1=You have yet to understand how all of this work...
+test.test1=You have yet to understand how all of this works...
 javax.faces.component.UIInput.CONVERSION                  = Conversion error
 javax.faces.component.UIInput.CONVERSION_detail           = "{0}": Error occurred when updating data.
 javax.faces.component.UIInput.REQUIRED                    = Value is required
