[FIX] improve message bundles

--- a/esup-commons-core/src/main/resources/properties/i18n/bundles/Commons_en.properties
+++ b/esup-commons-core/src/main/resources/properties/i18n/bundles/Commons_en.properties
@@ -69,17 +69,17 @@ FORM_SUBMIT_POPUP_TEXT = Please wait...
 LDAP_EXCEPTION.TEXT.TOP = The LDAP directory is not available, please try again.
 LDAP_EXCEPTION.TITLE    = LDAP directory not available
 
-LDAP_RESULTS.BUTTON.SEARCH_AGAIN         = Change your search
+LDAP_RESULTS.BUTTON.SEARCH_AGAIN         = Change your search terms
 LDAP_RESULTS.HEADER.ATTRIBUTES           = Attributes
 LDAP_RESULTS.HEADER.ID                   = Id
 LDAP_RESULTS.TEXT.ATTRIBUTES.CLOSE_BRACE = }
 LDAP_RESULTS.TEXT.ATTRIBUTES.OPEN_BRACE  = {
 LDAP_RESULTS.TEXT.ATTRIBUTES.SEPARATOR   = ,
-LDAP_RESULTS.TEXT.TOP                    = Please click on one user among those listed on this page to select him:
+LDAP_RESULTS.TEXT.TOP                    = Please click on one user among those listed on this page to select them:
 LDAP_RESULTS.TITLE                       = Result(s) of the LDAP search
 
 LDAP_SEARCH.BUTTON.SEARCH     = Search
-LDAP_SEARCH.MESSAGE.EMPTY     = Please enter the search token.
+LDAP_SEARCH.MESSAGE.EMPTY     = Please enter a search term.
 LDAP_SEARCH.MESSAGE.NO_RESULT = No Result for ''{0}''.
 LDAP_SEARCH.TEXT.PROMPT       = Search string:
 LDAP_SEARCH.TITLE             = Find a user in the LDAP directory
@@ -89,10 +89,10 @@ LDAP_STATISTICS.CACHED_REQUESTS   = Cached requests: {0} /{1} ({2}%)
 LDAP_STATISTICS.CONNECTION_ERRORS = Connection errors: {0} /{1} ({2}%)
 LDAP_STATISTICS.OPERATIONS        = LDAP operations: {0} /{1} ({2}%)
 LDAP_STATISTICS.OTHER_ERRORS      = Other errors: {0} /{1} ({2}%)
-LDAP_STATISTICS.SUCCESSFULL       = Successfull operations: {0} /{1} ({2}%)
+LDAP_STATISTICS.SUCCESSFULL       = Successful operations: {0} /{1} ({2}%)
 LDAP_STATISTICS.TOTAL_REQUESTS    = Total requests: {0}
 
-OUT_OF_MEMORY_EXCEPTION.TEXT.TOP = The application is out of memory.
+OUT_OF_MEMORY_EXCEPTION.TEXT.TOP = The application is running out of memory.
 OUT_OF_MEMORY_EXCEPTION.TITLE    = Out of memory
 
 PAGINATION.BUTTON.FIRST        = |<
@@ -110,7 +110,7 @@ PORTAL_STATISTICS.CACHED_REQUESTS   = Cached requests: {0} /{1} ({2}%)
 PORTAL_STATISTICS.CONNECTION_ERRORS = Connection errors: {0} /{1} ({2}%)
 PORTAL_STATISTICS.OPERATIONS        = WS operations: {0} /{1} ({2}%)
 PORTAL_STATISTICS.OTHER_ERRORS      = Other errors: {0} /{1} ({2}%)
-PORTAL_STATISTICS.SUCCESSFULL       = Successfull operations: {0} /{1} ({2}%)
+PORTAL_STATISTICS.SUCCESSFULL       = Successful operations: {0} /{1} ({2}%)
 PORTAL_STATISTICS.TOTAL_REQUESTS    = Total requests: {0}
 
 UNINITIALIZED_DATABASE_EXCEPTION.TEXT.TOP = The database is not initialized, run ant init-data and try again.
