--- a/esup-commons-core/src/main/resources/properties/i18n/bundles/Commons_fr.properties
+++ b/esup-commons-core/src/main/resources/properties/i18n/bundles/Commons_fr.properties
@@ -76,7 +76,7 @@ LDAP_RESULTS.TEXT.ATTRIBUTES.CLOSE_BRACE = }
 LDAP_RESULTS.TEXT.ATTRIBUTES.OPEN_BRACE  = {
 LDAP_RESULTS.TEXT.ATTRIBUTES.SEPARATOR   = ,
 LDAP_RESULTS.TEXT.TOP                    = Veuillez choisir parmi les utilisateurs list\u00E9s sur cette page en cliquant sur la personne voulue :
-LDAP_RESULTS.TITLE                       = Resultat(s) de la recherche LDAP
+LDAP_RESULTS.TITLE                       = R\u00E9sultat(s) de la recherche LDAP
 
 LDAP_SEARCH.BUTTON.SEARCH     = Rechercher
 LDAP_SEARCH.MESSAGE.EMPTY     = Veuillez entrer le motif de recherche.
@@ -116,11 +116,11 @@ PORTAL_STATISTICS.TOTAL_REQUESTS    = Nombre de requ\u00EAtes : {0}
 UNINITIALIZED_DATABASE_EXCEPTION.TEXT.TOP = La base de donn\u00E9es n'est pas initialis\u00E9e, ex\u00E9cutez ant init-data et recommencez.
 UNINITIALIZED_DATABASE_EXCEPTION.TITLE    = Base de donn\u00E9es non initialis\u00E9e
 
-VERSION_EXCEPTION.TEXT.1 = La base de donn\u00E9es et l'application sont incompatible.
+VERSION_EXCEPTION.TEXT.1 = La base de donn\u00E9es et l'application sont incompatibles.
 VERSION_EXCEPTION.TEXT.2 = Une mise \u00E0 jour est en cours, veuillez renouveller votre requ\u00EAte ult\u00E9rieurement.
 VERSION_EXCEPTION.TITLE  = Erreur de version
 
-WEB_FLOW_EXCEPTION.TEXT.TOP = Une erruer s'est produite lors d'une transition entre pages.
+WEB_FLOW_EXCEPTION.TEXT.TOP = Une erreur s'est produite lors d'une transition entre pages.
 WEB_FLOW_EXCEPTION.TITLE    = Erreur de navigation
 
 _.BUTTON.BACK                 = Retour
