--- a/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -36,5 +36,6 @@ TREATMENTS.CAS_DEMO         = CAS Demo
 TREATMENTS.DEEPLINKING_DEMO = DeepLinking Demo
 TREATMENTS.EXCEPTION_DEMO   = Exception Demo
 TREATMENTS.JPA_DEMO         = JPA Demo
+TREATMENTS.WURFL_DEMO       = WURFL Demo
 
 _.BUTTON.BACK_WELCOME = Back to Home
