--- a/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -1,40 +1,51 @@
 
-AJAX_DEMO.AUTOCOMPLETE = Exemple d'auto-compl\u00E9tion : (recherche sur la table USER)
-AJAX_DEMO.DESCRIPTION  = La librairie utilis\u00E9e pour r\u00E9aliser ces d\u00E9monstrations est PrimeFaces. Vous trouverez un guide complet via ces URLs : <a href="http://www.primefaces.org/showcase/ui/home.jsf">ici</a> et <a href="http://primefaces.googlecode.com/files/primefaces_users_guide_260710.pdf">ici</a> (guide PDF)
-AJAX_DEMO.SIMPLE       = Exemple d'une requ\u00EAte AJAX simple :
-AJAX_DEMO.TITLE        = D\u00E9monstration de l'utilisation d'AJAX
-
 APPLICATION.DESCRIPTION = Cette application contient de nombreux exemples sur l'utilisation des modules esup-commons.
 APPLICATION.TITLE       = Esup-todo-list
 
-CAS_DEMO.TITLE = D\u00E9monstration du module d'authentification
-
 CURRENT.USER = Utilisateur courant :
 
-DEEPLINKING_DEMO.DESCRIPTION              = La gestion des liens directs est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">ici</a>). La g\u00E9n\u00E9ration des ces liens est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">ici</a>).
-DEEPLINKING_DEMO.GENERATE_URL             = G\u00E9n\u00E9ration d'URL
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = Cette URL initialise le param\u00E8tre 'name' avec la valeur 'cleprous' puis redirige vers la page deeplinkingTest.
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Exemple \u00E9quivalent \u00E0 celui ci-dessus mais r\u00E9cup\u00E8re les retours d'une m\u00E9thode pour effectuer la redirection.
-DEEPLINKING_DEMO.NAME                     = Nom :
-DEEPLINKING_DEMO.NAME.EXPLAIN             = Le test est bon si la propri\u00E9t\u00E9 "name" est \u00E9gale \u00E0 la valeur en param\u00E8tre de l'URL.
-DEEPLINKING_DEMO.TITLE                    = D\u00E9monstration de la gestion des liens directs avec JSF
-
-EXCEPTION_DEMO.BUTTON.TEST = Test l'envoi d'une exception
-EXCEPTION_DEMO.DESCRIPTION = Ce module permet d'utiliser le service exceptionHandling d'esup-commons. (cf <a href="http://www.esup-portail.org/display/PROJCOMMONS/02+Gestion+des+exceptions">lien vers le wiki</a>). Cette d\u00E9monstration appelle une m\u00E9thode qui lance une exception. Le service exceptionHandling capte cette exception et redirige vers une page pr\u00E9d\u00E9finie.
-EXCEPTION_DEMO.TITLE       = D\u00E9monstration du module Exception Handler
-
-INFO.DELETE.SUCCESS = Entr\u00E9e supprim\u00E9e
-INFO.ENTER.SUCCESS  = Enregistrement avec succ\u00E8s
-
-JPA_DEMO.TITLE          = D\u00E9monstration de l'utilisation de JPA (CRUD)
-JPA_DEMO.TITLE.ADD_USER = Formulaire d'ajout d'un utilisateur
-
-LOADING.MESSAGE = Veuillez patienter ...
-
-TREATMENTS.AJAX_DEMO        = Ajax demo
-TREATMENTS.CAS_DEMO         = CAS demo
-TREATMENTS.DEEPLINKING_DEMO = DeepLinking demo
-TREATMENTS.EXCEPTION_DEMO   = Exception Demo
-TREATMENTS.JPA_DEMO         = JPA Demo
+TODO_DEMO.ACTION.ADD                              = Ajouter
+TODO_DEMO.ACTION.ADDSIGN                          = +
+TODO_DEMO.ACTION.CANCEL                           = Annuler
+TODO_DEMO.ACTION.CONNECT                          = Se connecter
+TODO_DEMO.ACTION.CREATE                           = Cr\u00E9er
+TODO_DEMO.ACTION.DELETE                           = Supprimer
+TODO_DEMO.ACTION.DELETESIGN                       = -
+TODO_DEMO.ACTION.MODIFY                           = Modifier
+TODO_DEMO.ACTION.RETURN                           = Retour
+TODO_DEMO.ADMIN                                   = Administration
+TODO_DEMO.ADMIN.USELDAP                           = Utiliser l'annuaire LDAP (\u00E0 configurer dans config.properties)
+TODO_DEMO.FORM.ACTION.CREATETASK                  = Cr\u00E9er une nouvelle t\u00E2che
+TODO_DEMO.FORM.ACTION.DELETETASK                  = Supprimer
+TODO_DEMO.FORM.ACTION.EDITTASK                    = Edition de la t\u00E2che
+TODO_DEMO.FORM.ACTION.MODIFYTASK                  = Editer
+TODO_DEMO.FORM.HIDETASKFORM                       = Cacher
+TODO_DEMO.FORM.PUBLICTASK                         = Ajouter une tache publique arbitraire pour la voir dans la liste
+TODO_DEMO.FORM.PUBLICTASK.SUCESS                  = T\u00E2che publique ajout\u00E9e !
+TODO_DEMO.FORM.SHOWTASKFORM                       = Afficher
+TODO_DEMO.FORM.TASK.ACTION                        = Action
+TODO_DEMO.FORM.TASK.ACTIONS                       = Actions
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = L''utilisateur ''{0}'' n'existe pas !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.CREATE  = Utilisateur assign\u00E9 !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.DELETED = Assignation supprim\u00E9e !
+TODO_DEMO.FORM.TASK.SUCESS.CREATED                = T\u00E2che ajout\u00E9e !
+TODO_DEMO.FORM.TASK.SUCESS.DELETED                = T\u00E2che supprim\u00E9e !
+TODO_DEMO.FORM.TASK.SUCESS.UPDATED                = T\u00E2che Mise \u00E0 jour !
+TODO_DEMO.INTRODUCTION                            = Bienvenue sur l'application de d\u00E9mo Todo
+TODO_DEMO.MENU.ADMIN                              = Administration
+TODO_DEMO.MENU.PRIVATE                            = Mes t\u00E2ches
+TODO_DEMO.MENU.PUBLIC                             = T\u00E2ches publiques
+TODO_DEMO.PRIVATE.INTRODUCTION                    = Gestion des T\u00E2ches de {0}
+TODO_DEMO.TASK                                    = T\u00E2che
+TODO_DEMO.TASK.ASSIGNATEDUSER                     = Utilisateur(s) assign\u00E9(s)
+TODO_DEMO.TASK.DATE                               = Date limite
+TODO_DEMO.TASK.DESCRIPTION                        = Description
+TODO_DEMO.TASK.ID                                 = #
+TODO_DEMO.TASK.OWNER                              = Propri\u00E9taire
+TODO_DEMO.TASK.PUBLICTASK                         = T\u00E2che publique
+TODO_DEMO.TASK.PUBLICTASK.WARN                    = Cette t\u00E2che sera visible par tous
+TODO_DEMO.TASK.SUCCESS.CREATE                     = T\u00E2che ajout\u00E9e !
+TODO_DEMO.TASK.TITLE                              = Titre
+TODO_DEMO.TASKS                                   = T\u00E2ches
 
 _.BUTTON.BACK_WELCOME = Retour \u00E0 l'accueil
