--- a/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -1,40 +1,51 @@
 
-AJAX_DEMO.AUTOCOMPLETE = Autocompletion example : (search users among the ones in database)\n
-AJAX_DEMO.DESCRIPTION  = This demo uses the Primefaces JSF library. You can find further information on its <a href="http://www.primefaces.org/showcase/ui/home.jsf">website</a> and <a href="http://primefaces.googlecode.com/files/primefaces_users_guide_260710.pdf">there</a> (PDF file).
-AJAX_DEMO.SIMPLE       = Simple AJAX request example :
-AJAX_DEMO.TITLE        = AJAX usage demo
-
 APPLICATION.DESCRIPTION = This demo contains lots of esup-commons module usage examples.
 APPLICATION.TITLE       = Esup-todo-list
 
-CAS_DEMO.TITLE = Identification Module Demo
-
 CURRENT.USER = Current user:
 
-DEEPLINKING_DEMO.DESCRIPTION              = Click (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">here</a>) to know how to handle direct links. To know how to generate such links, click (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">here</a>).
-DEEPLINKING_DEMO.GENERATE_URL             = URL Generation
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = This URL initializes the parameter 'name' with the value 'cleprous', then redirects to the deeplinkingTest page.
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Same thing as above except that we use a method return value to redirect the user.
-DEEPLINKING_DEMO.NAME                     = Name :
-DEEPLINKING_DEMO.NAME.EXPLAIN             = To know whether everything ran smoothly or not, check that the 'name' property value is equal to the value given in the URL (parameter).
-DEEPLINKING_DEMO.TITLE                    = JSF Deep Linking Demo
-
-EXCEPTION_DEMO.BUTTON.TEST = Try sending email when exception is thrown
-EXCEPTION_DEMO.DESCRIPTION = This module uses the exceptionHandling service provided by esup-commons (read the <a href="http://www.esup-portail.org/display/PROJCOMMONS/02+Gestion+des+exceptions">wiki page</a> for further information). The button calls a method in which an exception is thrown : the occurring error compels the exceptionHandling service to catch the exception then redirect the user to a specific page.
-EXCEPTION_DEMO.TITLE       = Exception Handler Demo
-
-INFO.DELETE.SUCCESS = Successfully deleted entry
-INFO.ENTER.SUCCESS  = Successfully saved entry
-
-JPA_DEMO.TITLE          = JPA usage Demo (CRUD)
-JPA_DEMO.TITLE.ADD_USER = Add user form
-
-LOADING.MESSAGE = Wait please...
-
-TREATMENTS.AJAX_DEMO        = Ajax Demo
-TREATMENTS.CAS_DEMO         = CAS Demo
-TREATMENTS.DEEPLINKING_DEMO = DeepLinking Demo
-TREATMENTS.EXCEPTION_DEMO   = Exception Demo
-TREATMENTS.JPA_DEMO         = JPA Demo
+TODO_DEMO.ACTION.ADD                              = Add
+TODO_DEMO.ACTION.ADDSIGN                          = +
+TODO_DEMO.ACTION.CANCEL                           = Cancel
+TODO_DEMO.ACTION.CONNECT                          = Connect
+TODO_DEMO.ACTION.CREATE                           = Create
+TODO_DEMO.ACTION.DELETE                           = Delete
+TODO_DEMO.ACTION.DELETESIGN                       = -
+TODO_DEMO.ACTION.MODIFY                           = Modify
+TODO_DEMO.ACTION.RETURN                           = Return
+TODO_DEMO.ADMIN                                   = Administration
+TODO_DEMO.ADMIN.USELDAP                           = Use LDAP directory (to configure in config.properties)
+TODO_DEMO.FORM.ACTION.CREATETASK                  = Create a new task
+TODO_DEMO.FORM.ACTION.DELETETASK                  = Delete
+TODO_DEMO.FORM.ACTION.EDITTASK                    = Task edit
+TODO_DEMO.FORM.ACTION.MODIFYTASK                  = Edit
+TODO_DEMO.FORM.HIDETASKFORM                       = Hide
+TODO_DEMO.FORM.PUBLICTASK                         = Add public task for test
+TODO_DEMO.FORM.PUBLICTASK.SUCESS                  = Public task added !
+TODO_DEMO.FORM.SHOWTASKFORM                       = Show
+TODO_DEMO.FORM.TASK.ACTION                        = Action
+TODO_DEMO.FORM.TASK.ACTIONS                       = Actions
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = User ''{0}'' not found !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.CREATE  = User assignated !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.DELETED = Assignation removed !
+TODO_DEMO.FORM.TASK.SUCESS.CREATED                = Task added !
+TODO_DEMO.FORM.TASK.SUCESS.DELETED                = Task deleted !
+TODO_DEMO.FORM.TASK.SUCESS.UPDATED                = Task updated !
+TODO_DEMO.INTRODUCTION                            = Welcome on the Todo Demo Application
+TODO_DEMO.MENU.ADMIN                              = Administration
+TODO_DEMO.MENU.PRIVATE                            = My tasks
+TODO_DEMO.MENU.PUBLIC                             = Public task
+TODO_DEMO.PRIVATE.INTRODUCTION                    = {0}s Todo manager
+TODO_DEMO.TASK                                    = Task
+TODO_DEMO.TASK.ASSIGNATEDUSER                     = Assignated user(s)
+TODO_DEMO.TASK.DATE                               = Date
+TODO_DEMO.TASK.DESCRIPTION                        = Description
+TODO_DEMO.TASK.ID                                 = #
+TODO_DEMO.TASK.OWNER                              = Owner
+TODO_DEMO.TASK.PUBLICTASK                         = Public task
+TODO_DEMO.TASK.PUBLICTASK.WARN                    = Everyone can see this task
+TODO_DEMO.TASK.SUCCESS.CREATE                     = Public task added !
+TODO_DEMO.TASK.TITLE                              = Title
+TODO_DEMO.TASKS                                   = Tasks
 
 _.BUTTON.BACK_WELCOME = Back to Home
