Correction update en base

--- a/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -25,7 +25,8 @@ TODO_DEMO.FORM.PUBLICTASK.SUCESS                  = Public task added !
 TODO_DEMO.FORM.SHOWTASKFORM                       = Show
 TODO_DEMO.FORM.TASK.ACTION                        = Action
 TODO_DEMO.FORM.TASK.ACTIONS                       = Actions
-TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = User ''{0}'' not found !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = User {0} not found !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.NOTNULL  = Type a user id please
 TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.CREATE  = User assignated !
 TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.DELETED = Assignation removed !
 TODO_DEMO.FORM.TASK.SUCESS.CREATED                = Task added !
