--- a/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/todo-list-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -25,7 +25,8 @@ TODO_DEMO.FORM.PUBLICTASK.SUCESS                  = T\u00E2che publique ajout\u0
 TODO_DEMO.FORM.SHOWTASKFORM                       = Afficher
 TODO_DEMO.FORM.TASK.ACTION                        = Action
 TODO_DEMO.FORM.TASK.ACTIONS                       = Actions
-TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = L''utilisateur ''{0}'' n'existe pas !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.CREATE   = L''utilisateur {0} n'existe pas !
+TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.ERROR.NOTNULL  = Saisir l'identifiant d'une personne
 TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.CREATE  = Utilisateur assign\u00E9 !
 TODO_DEMO.FORM.TASK.ASSIGNATEDUSER.SUCESS.DELETED = Assignation supprim\u00E9e !
 TODO_DEMO.FORM.TASK.SUCESS.CREATED                = T\u00E2che ajout\u00E9e !
