Correction du bug sur deepLink : Passage du controller et UserBean en scope session, Correction des config urlGenerator et ajout du fetch EAGER pour la relation User-Information

--- a/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -11,7 +11,7 @@ CAS_DEMO.TITLE = Identification Module Demo
 
 CURRENT.USER = Current user:
 
-DEEPLINKING_DEMO.DESCRIPTION              = Click (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">here</a>) to know how to handle direct links. To know how to generate such links, click (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">here</a>).
+DEEPLINKING_DEMO.DESCRIPTION              = Click  (<a href="http://www.esup-portail.org/x/4QAABg">http://www.esup-portail.org/x/4QAABg</a>) to know how to handle direct links. To know how to generate such links, click (<a href="http://www.esup-portail.org/x/JAEABg">here</a>).
 DEEPLINKING_DEMO.GENERATE_URL             = URL Generation
 DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = This URL initializes the parameter 'name' with the value 'cleprous', then redirects to the deeplinkingTest page.
 DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Same thing as above except that we use a method return value to redirect the user.
