--- a/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -11,7 +11,7 @@ CAS_DEMO.TITLE = D\u00E9monstration du module d'authentification
 
 CURRENT.USER = Utilisateur courant :
 
-DEEPLINKING_DEMO.DESCRIPTION              = La gestion des liens directs est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">ici</a>). La g\u00E9n\u00E9ration des ces liens est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">ici</a>).
+DEEPLINKING_DEMO.DESCRIPTION              = La gestion des liens directs est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/x/4QAABg">http://www.esup-portail.org/x/4QAABg</a>). La g\u00E9n\u00E9ration des ces liens est pr\u00E9cis\u00E9e dans cette page (<a href="http://www.esup-portail.org/x/JAEABg">ici</a>).
 DEEPLINKING_DEMO.GENERATE_URL             = G\u00E9n\u00E9ration d'URL
 DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = Cette URL initialise le param\u00E8tre 'name' avec la valeur 'cleprous' puis redirige vers la page deeplinkingTest.
 DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Exemple \u00E9quivalent \u00E0 celui ci-dessus mais r\u00E9cup\u00E8re les retours d'une m\u00E9thode pour effectuer la redirection.
