--- a/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -1,40 +1,50 @@
 
-AJAX_DEMO.AUTOCOMPLETE = Autocompletion example : (search users among the ones in database)\n
-AJAX_DEMO.DESCRIPTION  = This demo uses the Primefaces JSF library. You can find further information on its <a href="http://www.primefaces.org/showcase/ui/home.jsf">website</a> and <a href="http://primefaces.googlecode.com/files/primefaces_users_guide_260710.pdf">there</a> (PDF file).
-AJAX_DEMO.SIMPLE       = Simple AJAX request example :
-AJAX_DEMO.TITLE        = AJAX usage demo
+ABOUT.TEXT                 = About
+ABOUT.TEXT.AUTHORS         = Authors
+ABOUT.TEXT.AUTHORS.YD      = Yves Deschamps - Universit\u00E9 de Lille 1 - France
+ABOUT.TEXT.COPYRIGHT       = Copyright \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.LICENCE         = Licence
+ABOUT.TEXT.LICENCE.CONTENT = ESUP-portail
+ABOUT.TEXT.OTHERS          = Others informations
+ABOUT.TEXT.OTHERS.CONTENT  = To complete...
+ABOUT.TEXT.SUMMARY         = Abstract
+ABOUT.TEXT.SUMMARY.CONTENT = Abstract content
 
-APPLICATION.DESCRIPTION = This demo contains lots of esup-commons module usage examples.
-APPLICATION.TITLE       = Esup-example
+ADMIN.TRUE.TEXT = Administrator
 
-CAS_DEMO.TITLE = Identification Module Demo
+EXAMPLE.TEXT = Example Application
 
-CURRENT.USER = Current user:
+HELP.TEXT         = Help
+HELP.TEXT.SUMMARY = Here, come to register the online help...
 
-DEEPLINKING_DEMO.DESCRIPTION              = Click (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">here</a>) to know how to handle direct links. To know how to generate such links, click (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">here</a>).
-DEEPLINKING_DEMO.GENERATE_URL             = URL Generation
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = This URL initializes the parameter 'name' with the value 'cleprous', then redirects to the deeplinkingTest page.
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Same thing as above except that we use a method return value to redirect the user.
-DEEPLINKING_DEMO.NAME                     = Name :
-DEEPLINKING_DEMO.NAME.EXPLAIN             = To know whether everything ran smoothly or not, check that the 'name' property value is equal to the value given in the URL (parameter).
-DEEPLINKING_DEMO.TITLE                    = JSF Deep Linking Demo
+LOGIN.TEXT = Login
 
-EXCEPTION_DEMO.BUTTON.TEST = Try sending email when exception is thrown
-EXCEPTION_DEMO.DESCRIPTION = This module uses the exceptionHandling service provided by esup-commons (read the <a href="http://www.esup-portail.org/display/PROJCOMMONS/02+Gestion+des+exceptions">wiki page</a> for further information). The button calls a method in which an exception is thrown : the occurring error compels the exceptionHandling service to catch the exception then redirect the user to a specific page.
-EXCEPTION_DEMO.TITLE       = Exception Handler Demo
+LOGOUT.TEXT = Logout
 
-INFO.DELETE.SUCCESS = Successfully deleted entry
-INFO.ENTER.SUCCESS  = Successfully saved entry
+MENU.SHORTDESC = Main menu
 
-JPA_DEMO.TITLE          = JPA usage Demo (CRUD)
-JPA_DEMO.TITLE.ADD_USER = Add user form
+MOBILE.TEXT = Wiew in mobile mode
 
-LOADING.MESSAGE = Wait please...
+PREFERENCES.ACCESSIBILITY.DEFAULT           = Default
+PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Inaccessible
+PREFERENCES.ACCESSIBILITY.LABEL             = Accessibility mode
+PREFERENCES.ACCESSIBILITY.SCREENREADER      = For screen reader.
+PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT = <b>Attention</b>: you chose to use a reader of screen to return this more accessible application.\r\nThis may affect other users negatively
+PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Accessibility Mode:
+PREFERENCES.LANGUAGE.LABEL                  = Your language
+PREFERENCES.LANGUAGE.SHORT_LABEL            = Language:
+PREFERENCES.PRINT.A4_LANDSCAPE              = A4 - Landscape
+PREFERENCES.PRINT.A4_PORTRAIT               = A4 - Portrait
+PREFERENCES.PRINT.LABEL                     = Pdf format
+PREFERENCES.PRINT.LUS_LANDSCAPE             = Letter US - Portrait
+PREFERENCES.PRINT.LUS_PORTRAIT              = Letter US - Portrait
+PREFERENCES.TEXT                            = Preferences
 
-TREATMENTS.AJAX_DEMO        = Ajax Demo
-TREATMENTS.CAS_DEMO         = CAS Demo
-TREATMENTS.DEEPLINKING_DEMO = DeepLinking Demo
-TREATMENTS.EXCEPTION_DEMO   = Exception Demo
-TREATMENTS.JPA_DEMO         = JPA Demo
+SUBMIT.TEXT = Submit
 
-_.BUTTON.BACK_WELCOME = Back to Home
+USER.TEXT = User
+
+WELCOME.INTRO_1 = Welcome to "
+WELCOME.INTRO_2 = " - version 
+WELCOME.INTRO_3 = . You can change your settings above.
+WELCOME.TEXT    = Welcome
