--- a/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -1,40 +1,50 @@
 
-AJAX_DEMO.AUTOCOMPLETE = Exemple d'auto-compl\u00E9tion : (recherche sur la table USER)
-AJAX_DEMO.DESCRIPTION  = La librairie utilis\u00E9e pour r\u00E9aliser ces d\u00E9monstrations est PrimeFaces. Vous trouverez un guide complet via ces URLs : <a href="http://www.primefaces.org/showcase/ui/home.jsf">ici</a> et <a href="http://primefaces.googlecode.com/files/primefaces_users_guide_260710.pdf">ici</a> (guide PDF)
-AJAX_DEMO.SIMPLE       = Exemple d'une requ\u00EAte AJAX simple :
-AJAX_DEMO.TITLE        = D\u00E9monstration de l'utilisation d'AJAX
+ABOUT.TEXT                 = A propos
+ABOUT.TEXT.AUTHORS         = Auteurs
+ABOUT.TEXT.AUTHORS.YD      = Yves Deschamps - Universit\u00E9 de Lille 1 - France
+ABOUT.TEXT.COPYRIGHT       = Copyright \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.LICENCE         = Licence
+ABOUT.TEXT.LICENCE.CONTENT = ESUP-portail
+ABOUT.TEXT.OTHERS          = Autres informations
+ABOUT.TEXT.OTHERS.CONTENT  = A compl\u00E9ter...
+ABOUT.TEXT.SUMMARY         = R\u00E9sum\u00E9
+ABOUT.TEXT.SUMMARY.CONTENT = Contenu du r\u00E9sum\u00E9
 
-APPLICATION.DESCRIPTION = Cette application contient de nombreux exemples sur l'utilisation des modules esup-commons.
-APPLICATION.TITLE       = Esup-example
+ADMIN.TRUE.TEXT = Administrateur
 
-CAS_DEMO.TITLE = D\u00E9monstration du module d'authentification
+EXAMPLE.TEXT = Application Example
 
-CURRENT.USER = Utilisateur courant :
+HELP.TEXT         = Aide
+HELP.TEXT.SUMMARY = Ici, venir inscrire l'aide en ligne...
 
-DEEPLINKING_DEMO.DESCRIPTION              = La gestion des liens directs est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/display/PROJCOMMONS/V2-2.1+Gestion+des+liens+hypertextes+%28directs%29">ici</a>). La g\u00E9n\u00E9ration des ces liens est d\u00E9crite dans cette page (<a href="http://www.esup-portail.org/pages/viewpage.action?pageId=6684922">ici</a>).
-DEEPLINKING_DEMO.GENERATE_URL             = G\u00E9n\u00E9ration d'URL
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME  = Cette URL initialise le param\u00E8tre 'name' avec la valeur 'cleprous' puis redirige vers la page deeplinkingTest.
-DEEPLINKING_DEMO.GENERATE_URL.PARAM_NAME2 = Exemple \u00E9quivalent \u00E0 celui ci-dessus mais r\u00E9cup\u00E8re les retours d'une m\u00E9thode pour effectuer la redirection.
-DEEPLINKING_DEMO.NAME                     = Nom :
-DEEPLINKING_DEMO.NAME.EXPLAIN             = Le test est bon si la propri\u00E9t\u00E9 "name" est \u00E9gale \u00E0 la valeur en param\u00E8tre de l'URL.
-DEEPLINKING_DEMO.TITLE                    = D\u00E9monstration de la gestion des liens directs avec JSF
+LOGIN.TEXT = Authentification
 
-EXCEPTION_DEMO.BUTTON.TEST = Test l'envoi d'une exception
-EXCEPTION_DEMO.DESCRIPTION = Ce module permet d'utiliser le service exceptionHandling d'esup-commons. (cf <a href="http://www.esup-portail.org/display/PROJCOMMONS/02+Gestion+des+exceptions">lien vers le wiki</a>). Cette d\u00E9monstration appelle une m\u00E9thode qui lance une exception. Le service exceptionHandling capte cette exception et redirige vers une page pr\u00E9d\u00E9finie.
-EXCEPTION_DEMO.TITLE       = D\u00E9monstration du module Exception Handler
+LOGOUT.TEXT = D\u00E9connexion
 
-INFO.DELETE.SUCCESS = Entr\u00E9e supprim\u00E9e
-INFO.ENTER.SUCCESS  = Enregistrement avec succ\u00E8s
+MENU.SHORTDESC = Menu principal
 
-JPA_DEMO.TITLE          = D\u00E9monstration de l'utilisation de JPA (CRUD)
-JPA_DEMO.TITLE.ADD_USER = Formulaire d'ajout d'un utilisateur
+MOBILE.TEXT = Voir en mode mobile
 
-LOADING.MESSAGE = Veuillez patienter ...
+PREFERENCES.ACCESSIBILITY.DEFAULT           = Par d\u00E9faut
+PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Non accessible
+PREFERENCES.ACCESSIBILITY.LABEL             = Mode d'accessibilit\u00E9
+PREFERENCES.ACCESSIBILITY.SCREENREADER      = Pour lecteur d'\u00E9cran.
+PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT = <b>Attention</b> : vous avez choisi d'utiliser un lecteur d'\u00E9cran pour rendre cette application plus accessible.\r\nCeci peut affecter n\u00E9gativement d'autres usages.
+PREFERENCES.ACCESSIBILITY.SHORT_LABEL       = Mode d'Accessibilit\u00E9:
+PREFERENCES.LANGUAGE.LABEL                  = Votre langue
+PREFERENCES.LANGUAGE.SHORT_LABEL            = Langue:
+PREFERENCES.PRINT.A4_LANDSCAPE              = A4 - Paysage
+PREFERENCES.PRINT.A4_PORTRAIT               = A4 - Portrait
+PREFERENCES.PRINT.LABEL                     = Format pour les pdf
+PREFERENCES.PRINT.LUS_LANDSCAPE             = Lettre US - Paysage
+PREFERENCES.PRINT.LUS_PORTRAIT              = Lettre US - Portrait
+PREFERENCES.TEXT                            = Pr\u00E9f\u00E9rences
 
-TREATMENTS.AJAX_DEMO        = Ajax demo
-TREATMENTS.CAS_DEMO         = CAS demo
-TREATMENTS.DEEPLINKING_DEMO = DeepLinking demo
-TREATMENTS.EXCEPTION_DEMO   = Exception Demo
-TREATMENTS.JPA_DEMO         = JPA Demo
+SUBMIT.TEXT = Accepter
 
-_.BUTTON.BACK_WELCOME = Retour \u00E0 l'accueil
+USER.TEXT = Utilisateur
+
+WELCOME.INTRO_1 = Bienvenue dans "
+WELCOME.INTRO_2 = " - version 
+WELCOME.INTRO_3 = . Vous pouvez changer vos pr\u00E9f\u00E9rences ci-dessus.
+WELCOME.TEXT    = Accueil
