--- a/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -1,16 +1,22 @@
 
-ABOUT.TEXT                 = About
-ABOUT.TEXT.AUTHORS         = Authors
-ABOUT.TEXT.AUTHORS.YD      = Yves Deschamps - Universit\u00E9 de Lille 1 - France
-ABOUT.TEXT.COPYRIGHT       = Copyright \u00A9 2011 Consortium ESUP-Portail
-ABOUT.TEXT.LICENCE         = Licence
-ABOUT.TEXT.LICENCE.CONTENT = ESUP-portail
-ABOUT.TEXT.OTHERS          = Others informations
-ABOUT.TEXT.OTHERS.CONTENT  = To complete...
-ABOUT.TEXT.SUMMARY         = Abstract
-ABOUT.TEXT.SUMMARY.CONTENT = Abstract content
+ABOUT.TEXT                     = About
+ABOUT.TEXT.AUTHORS             = Authors
+ABOUT.TEXT.AUTHORS.YD          = Yves Deschamps - Universit\u00E9 de Lille 1 - France
+ABOUT.TEXT.COPYRIGHT           = Copyright \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.LICENCE             = Licence
+ABOUT.TEXT.LICENCE.CONTENT     = ESUP-portail
+ABOUT.TEXT.M_COPYRIGHT         = Copyright
+ABOUT.TEXT.M_COPYRIGHT.CONTENT = \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.OTHERS              = Others informations
+ABOUT.TEXT.OTHERS.CONTENT      = To complete...
+ABOUT.TEXT.SUMMARY             = Abstract
+ABOUT.TEXT.SUMMARY.CONTENT     = Abstract content
 
 ADMIN.TRUE.TEXT = Administrator
+
+BACK.TEXT = Back
+
+DESKTOP.TEXT = Wiew in desktop mode
 
 EXAMPLE.TEXT = Example Application
 
@@ -24,6 +30,8 @@ LOGOUT.TEXT = Logout
 MENU.SHORTDESC = Main menu
 
 MOBILE.TEXT = Wiew in mobile mode
+
+M_EXAMPLE.TEXT = Example
 
 PREFERENCES.ACCESSIBILITY.DEFAULT           = Default
 PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Inaccessible
