--- a/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -1,16 +1,22 @@
 
-ABOUT.TEXT                 = A propos
-ABOUT.TEXT.AUTHORS         = Auteurs
-ABOUT.TEXT.AUTHORS.YD      = Yves Deschamps - Universit\u00E9 de Lille 1 - France
-ABOUT.TEXT.COPYRIGHT       = Copyright \u00A9 2011 Consortium ESUP-Portail
-ABOUT.TEXT.LICENCE         = Licence
-ABOUT.TEXT.LICENCE.CONTENT = ESUP-portail
-ABOUT.TEXT.OTHERS          = Autres informations
-ABOUT.TEXT.OTHERS.CONTENT  = A compl\u00E9ter...
-ABOUT.TEXT.SUMMARY         = R\u00E9sum\u00E9
-ABOUT.TEXT.SUMMARY.CONTENT = Contenu du r\u00E9sum\u00E9
+ABOUT.TEXT                     = A propos
+ABOUT.TEXT.AUTHORS             = Auteurs
+ABOUT.TEXT.AUTHORS.YD          = Yves Deschamps - Universit\u00E9 de Lille 1 - France
+ABOUT.TEXT.COPYRIGHT           = Copyright \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.LICENCE             = Licence
+ABOUT.TEXT.LICENCE.CONTENT     = ESUP-portail
+ABOUT.TEXT.M_COPYRIGHT         = Copyright
+ABOUT.TEXT.M_COPYRIGHT.CONTENT = \u00A9 2011 Consortium ESUP-Portail
+ABOUT.TEXT.OTHERS              = Autres informations
+ABOUT.TEXT.OTHERS.CONTENT      = A compl\u00E9ter...
+ABOUT.TEXT.SUMMARY             = R\u00E9sum\u00E9
+ABOUT.TEXT.SUMMARY.CONTENT     = Contenu du r\u00E9sum\u00E9
 
 ADMIN.TRUE.TEXT = Administrateur
+
+BACK.TEXT = Retour
+
+DESKTOP.TEXT = Voir en mode bureau
 
 EXAMPLE.TEXT = Application Example
 
@@ -24,6 +30,8 @@ LOGOUT.TEXT = D\u00E9connexion
 MENU.SHORTDESC = Menu principal
 
 MOBILE.TEXT = Voir en mode mobile
+
+M_EXAMPLE.TEXT = Exemple
 
 PREFERENCES.ACCESSIBILITY.DEFAULT           = Par d\u00E9faut
 PREFERENCES.ACCESSIBILITY.INACCESSIBLE      = Non accessible
