Tests I18N sur example-web-jsf-mixed

--- a/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-mixed/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -5,6 +5,7 @@ ABOUT.TEXT.AUTHORS.YD          = Yves Deschamps - Universit\u00E9 de Lille 1 - F
 ABOUT.TEXT.COPYRIGHT           = Copyright \u00A9 2011 Consortium ESUP-Portail
 ABOUT.TEXT.LICENCE             = Licence
 ABOUT.TEXT.LICENCE.CONTENT     = ESUP-portail
+ABOUT.TEXT.LICENCE.CONTENT.LINK = http://www.esup-portail.org/display/ESUP/La+licence+ESUP-Portail
 ABOUT.TEXT.M_COPYRIGHT         = Copyright
 ABOUT.TEXT.M_COPYRIGHT.CONTENT = \u00A9 2011 Consortium ESUP-Portail
 ABOUT.TEXT.OTHERS              = Others informations
