--- a/esup-formation-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-formation-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -12,6 +12,7 @@ BLANK.MENU.TITLE           = About this blank application
 BLANK.WELCOME              = This is the blank application. You can now start your own projet. Various examples in the esup-example project can help you in doing so.
 
 TASK.DATE                    = Date
+TASK.DESCRIPTION             = Description
 TASK.ID                      = Id
 TASK.MANAGER                 = Task Manager
 TASK.MANAGER.ADD             = Add
@@ -19,4 +20,5 @@ TASK.MANAGER.ADD.FAKETASK    = Add a fake task
 TASK.MANAGER.ADD.TASK        = Create a new task
 TASK.MANAGER.DELETE.ALLTASKS = Delete all tasks
 TASK.MANAGER.NOTASKS         = The tasklist is empty
+TASK.PUBLICTASK              = Is it a public task?
 TASK.TITLE                   = Title
