--- a/esup-formation-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/esup-formation-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -20,5 +20,6 @@ TASK.MANAGER.ADD.FAKETASK    = Add a fake task
 TASK.MANAGER.ADD.TASK        = Create a new task
 TASK.MANAGER.DELETE.ALLTASKS = Delete all tasks
 TASK.MANAGER.NOTASKS         = The tasklist is empty
+TASK.OWNER                   = Owner
 TASK.PUBLICTASK              = Is it a public task?
 TASK.TITLE                   = Title
