--- a/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_fr.properties
@@ -31,10 +31,16 @@ JPA_DEMO.TITLE.ADD_USER = Formulaire d'ajout d'un utilisateur
 
 LOADING.MESSAGE = Veuillez patienter ...
 
+REST_DEMO.DESCRIPTION = Service REST (<a href="http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST">http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST</a>).
+REST_DEMO.GET_REST    = Obtenir un flux JSon en REST
+REST_DEMO.JQUERY_REST = Utilisation du flux JSON avec JQuery
+REST_DEMO.TITLE       = D\u00E9monstration REST
+
 TREATMENTS.AJAX_DEMO        = Ajax demo
 TREATMENTS.CAS_DEMO         = CAS demo
 TREATMENTS.DEEPLINKING_DEMO = DeepLinking demo
 TREATMENTS.EXCEPTION_DEMO   = Exception Demo
 TREATMENTS.JPA_DEMO         = JPA Demo
+TREATMENTS.REST_DEMO        = Rest Demo
 
 _.BUTTON.BACK_WELCOME = Retour \u00E0 l'accueil
